<resources>
    <string name="app_name">Muras</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv_if">Если хотите стать нашим партнёром, напишите на наш номер: </string>
    <string name="tv_number">+(996)5058025</string>
    <string name="text_about_us">“Бирдик” - туристическая компания, направленная на улучшения экологии Кыргызстана. Во время тура человек может не только насладиться красотой природы, но также посодействовать в процессе сбора мусора и других дел. Мы также сообщаем о маштабных мероприятиях, таких как рассадка деревьев и субботники.
</string>
    <string name="tv_date">Дата:</string>
    <string name="tv_hard">Cложность:</string>
    <string name="about_us">О нас</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_remained">Осталось 7 из 16 мест</string>
    <string name="tv_name">Азиза</string>
    <string name="text_description">Сходили с семьёй на этот тур, в восторге! Такая красота прям! Такие виды активности отличное решение для проведения досуга. Цена очень даже приемлимая.</string>
    <string name="edit_profile">Изменить профиль</string>
    <string name="gmail">gmail.com</string>
    <string name="full_name">Full Name</string>
    <string name="night_theme">Темная тема</string>
    <string name="notifications">Уведомления</string>
    <string name="exit">Выйти</string>
    <string name="read_books">Прочитанные</string>
    <string name="favorites">Избранное</string>
    <string name="author">Автор</string>
    <string name="name">Название</string>
    <string name="_0">0</string>
    <string name="star">Star</string>
    <string name="recent_request">Недавние запросы</string>
    <string name="recently_watched">Недавно смотрели</string>
    <string name="title">Подборка книг от Айтматова</string>
    <string name="russian_language">Русский язык</string>
    <string name="kyrgyz_language">Кыргыз Тили</string>
    <string name="your_request">Ваш запрос</string>
    <string name="we_well_answer">Мы ответим вам при первой же возможности</string>
    <string name="tell_me_in_detail">Расскажите детально с какой проблемой вы столкнулись</string>
    <string name="send">Отправить</string>
    <string name="change_photo">Сменить фото</string>
    <string name="your_data">Ваши данные</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="save">Сохранить</string>
    <string name="change">Изменить</string>
    <string name="change_password">Изменить пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="new_password_return">Введите пароль снова</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="date">Date</string>
    <string name="auth_free_read_book">Войти, чтобы бесплатно читать\nкниги ваших любимых писателей!</string>
    <string name="password">Введите пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="registration">Регистрация</string>
    <string name="entrance">Вход</string>
    <string name="google">Google</string>
    <string name="sign_in">Войти</string>
    <string name="have_you_forgotten_your_password">Вы забыли пароль?</string>
    <string name="restore">Восстановить</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="register_free_read_book">Зарегистрируйтесь, чтобы\nбесплатно читать книги\nваших любимых писателей</string>
    <string name="activate_free_read_book">Активируйте аккаунт, чтобы\nбесплатно читать книги\nваших любимых писателей</string>
    <string name="the_password_must_be_at_least_eight_characters_long_and_must_contain_letters_numbers_and_special_characters">Пароль должен содержать не менее восьми знаков, включать буквы, цифры и специальные символы</string>
    <string name="i_read_and_agree_with">Я прочитал и согласен с</string>
    <string name="read_book">Читать</string>
    <string name="author_book">Автор:</string>
    <string name="genre">Жанр:</string>
    <string name="rating">Рейтинг:</string>
    <string name="number_of_pages">Количество страниц:</string>
    <string name="description">Описание</string>
    <string name="reviews">Отзывы</string>
    <string name="all_reviews">Все отзывы</string>
    <string name="similar_books">Похожие книги</string>
    <string name="register">Зарегистрироваться</string>
    <string name="have_an_account">У вас есть аккаунт?</string>
    <string name="login">Войти</string>
    <string name="welcome_to_muras">Добро пожаловать в Muras - приложение для электронной книги, которое позволяет вам читать любимые книги.</string>
    <string name="muras_enjoy_books">С Muras вы можете наслаждаться книгами разных жанров и авторов</string>
    <string name="muras_read_share">Muras - это не просто приложение для чтения, а целое сообщество Читайте книги и делитесь своими впечатлениями</string>
    <string name="skip">Пропустить</string>
    <string name="privacy">Политика конфиденциальности</string>
    <string name="languages_app">Язык приложения</string>
    <string name="send_support">Написать в поддержку</string>
    <string name="web_site">Перейти на веб-сайт</string>
    <string name="reviews_and_estimates">Оценки и отзывы</string>
    <string name="enter_code_4_numbers">Введите код из 4 цифр</string>
    <string name="____">______ _____ ______ ______</string>
    <string name="publication_year">Дата публикации:</string>
    <string name="enter_reviews_book">Напишите отзыв о книге</string>
    <string name="rate_book">Оцените книгу</string>
    <string name="you_access_enter_your_account">Вы успешно вошли в свой аккаунт!</string>
    <string name="code_send_to_you_email">Код для активации был отправлен на почту!</string>
    <string name="please_enter_to_account">Пожайлуста войдите в свой аккаунт!</string>
    <string name="user">user</string>
    <string name="from">из</string>
    <string name="display_name">Отображаемое имя</string>
    <string name="change_email_address">Изменить электронную почту</string>
    <string name="enter_new_email_address">Введите новую электронную почту</string>
    <string name="info_account">Информация об аккаунте</string>
    <string name="reading_now">Читаю сейчас</string>
    <string name="reading">Читаю</string>
    <string name="finished">Завершено</string>
    <string name="and">и</string>
    <string name="terms_of_use">Правилами Пользования</string>
    <string name="privacy_policy">Политикой Конфидециальности</string>
    <string name="code_not_received">Не пришел код?</string>
    <string name="to_retry">Повторить попытку</string>
    <string name="please_accept_the_terms_and_privacy_policy">Пожалуйста, примите условия и политику конфиденциальности</string>
    <string name="russian">Русский</string>
    <string name="kyrgyz_tili">Кыргыз тили</string>
    <string name="english">English</string>
    <string name="som">Сом</string>
    <string name="dollar">Доллар($)</string>
    <string name="asia_travel">Asia Travel</string>
    <string name="my_profile">Мой профиль</string>
    <string name="number_phone">Номер телефона</string>
    <string name="email">E-mail</string>
</resources>