<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/logo_muras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:drawablePadding="12dp"
        android:fontFamily="@font/ff_roboto_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/new_black"
        android:textSize="30sp"
        app:drawableLeftCompat="@drawable/ic_muras_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_free_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/ff_roboto_regular"
        android:text="@string/activate_free_read_book"
        android:textAlignment="center"
        android:textColor="@color/new_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_muras" />

    <LinearLayout
        android:id="@+id/register_auth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="32dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_free_read">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_settings_profile_left_radius"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/ff_roboto_medium"
            android:paddingHorizontal="30dp"
            android:paddingVertical="6dp"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_settings_profile_right_radius"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ff_roboto_medium"
            android:paddingHorizontal="64dp"
            android:paddingVertical="6dp"
            android:text="@string/entrance"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>


        <LinearLayout
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/register_auth_layout"
            android:id="@+id/activate_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
           >

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/box_corners_10"
                app:boxCornerRadiusBottomStart="@dimen/box_corners_10"
                app:boxCornerRadiusTopEnd="@dimen/box_corners_10"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_activation_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ff_roboto_medium"
                    android:gravity="center"
                    android:maxLength="4"
                    android:textColorHint="@color/gray"
                    android:hint="@string/____"
                    android:inputType="number"
                    android:paddingHorizontal="18dp"
                    android:paddingVertical="14dp"
                    android:textColor="@color/new_black"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ff_roboto_regular"
                android:text="@string/enter_code_4_numbers"
                android:textColor="@color/new_black"
                android:textSize="16sp" />


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/activate_layout">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_style_settings_profile"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/ff_roboto_regular"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/new_black"
                android:text="@string/code_not_received"
                android:fontFamily="@font/ff_roboto_regular"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_to_retry"
                android:textColor="@color/orange"
                android:text="@string/to_retry"
                android:fontFamily="@font/ff_roboto_regular"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
