<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.about_us.AboutUsFragment">

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/about_us"
        android:textColor="@color/dark_green"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_about_us"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_about_us"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/img_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_about"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/tv_if"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_if"
        android:textColor="@color/dark_green"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/img_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_about_us"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_number"
        android:textColor="@color/dark_green"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/img_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_if"
        app:layout_constraintWidth_percent="0.45" />

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:src="@drawable/ic_icon"
        app:layout_constraintBottom_toBottomOf="@id/text_about_us"
        app:layout_constraintStart_toEndOf="@id/text_about_us"
        app:layout_constraintTop_toBottomOf="@id/tv_about" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Asia Travel"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/text_about_us"
        app:layout_constraintStart_toEndOf="@id/img_icon"
        app:layout_constraintTop_toBottomOf="@id/tv_about" />

</androidx.constraintlayout.widget.ConstraintLayout>