<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_boarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_onboard_one" />

        <TextView
            android:id="@+id/tv_title"
            android:textSize="18sp"
            android:fontFamily="@font/ff_roboto_regular"
            android:textColor="@color/new_black"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/muras_enjoy_books" />
    </LinearLayout>

    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/skip"
        android:textSize="22sp"
        android:id="@+id/tv_skip"
        android:layout_marginHorizontal="16dp"
        android:drawablePadding="8dp"
        android:layout_marginBottom="85dp"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:drawableTint="@color/orange" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/btn_layout"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/ff_roboto_regular"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@drawable/button_style_settings_profile"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:gravity="center"
            android:id="@+id/btn_login"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="@id/btn_register"
            app:layout_constraintTop_toBottomOf="@id/btn_register">

            <TextView
                android:id="@+id/tv_is_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/ff_roboto_regular"
                android:text="@string/have_an_account" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="16sp"
                android:fontFamily="@font/ff_roboto_regular"
                android:text="@string/login"
                android:textColor="@color/orange" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>