<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.restore.RestoreFragment">

    <TextView
        android:id="@+id/logo_muras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/ff_roboto_bold"
        android:text="@string/app_name"
        android:textColor="@color/new_black"
        android:textSize="30sp"
        app:drawableLeftCompat="@drawable/ic_muras_small" />


    <TextView
        android:id="@+id/tv_free_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/ff_roboto_regular"
        android:text="@string/auth_free_read_book"
        android:textAlignment="center"
        android:textColor="@color/new_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_muras" />

    <LinearLayout
        android:id="@+id/register_auth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="32dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_free_read">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_settings_profile_left_radius"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ff_roboto_medium"
            android:paddingHorizontal="30dp"
            android:paddingVertical="6dp"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_settings_profile_right_radius"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/ff_roboto_medium"
            android:paddingHorizontal="64dp"
            android:paddingVertical="6dp"
            android:text="@string/entrance"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/auth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/register_auth_layout">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:fontFamily="@font/ff_roboto_medium"
                android:hint="@string/e_mail"
                android:id="@+id/ed_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="18dp"
                android:paddingVertical="14dp"
                android:textColor="@color/new_black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLength="4"
                android:fontFamily="@font/ff_roboto_medium"
                android:hint="@string/____"
                android:inputType="number"
                android:paddingHorizontal="18dp"
                android:textColor="@color/new_black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="4dp"
            android:textColor="@color/new_black"
            android:textSize="16sp"
            android:fontFamily="@font/ff_roboto_regular"
            android:text="Введите  код из 4 цифр"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/auth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_style_settings_profile"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/ff_roboto_regular"
            android:text="@string/restore"
            android:id="@+id/btn_restore"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>